# harborlight-rag

./: .env.example  .gitignore  instructions.md  main.py  product_development_lifecycle_summary.md  pyproject.toml
config/: settings.py
docs/: 01_problem_statement.md  02_business_requirements.md  03_stakeholders_and_ownership.md  04_discovery_questions.md  05_data_readiness_checklist.md  06_golden_dataset_plan.md  07_solution_design.md  08_architecture_decisions.md  09_test_strategy.md  10_mlops_and_deployment_plan.md  11_monitoring_observability_plan.md  12_governance_and_risk_plan.md  13_production_readiness_checklist.md
docs/diagrams/: architecture.md  docker_deployment.md  workflow_sequence.md
evaluation/: eval_answers.py  eval_pipeline.py  eval_retrieval.py  evaluator_app.py  test_schema.py  tests.jsonl
ingestion/: build_vector_db.py  chunk_documents.py  ingest.py  load_documents.py  validate_documents.py
knowledge_base/company/: culture.md  leadership.md  offices.md  overview.md
knowledge_base/customers/: blueriver_freight.md  cedarline_distribution.md  eastgate_ports.md  greencurrent_shipping.md  harbornova_terminal.md  metrodray_services.md  northpier_logistics.md  silverquay_authority.md  terraport_cold_chain.md  urbanhaul_express.md
knowledge_base/incidents/: 2023-10-fleetpulse-telemetry-lag.md  2024-07-delaycast-weather-feed.md  2024-11-dockflow-berth-refresh.md  2025-02-emissionslens-report-delay.md  2025-05-routewise-routing-window.md
knowledge_base/policies/: data_retention.md  pricing.md  (+2 more)
rag_app/: answer.py  app.py  prompts.py  retriever.py
(+6 files in other folders)
